# corridor-backtest

./: .env.example  README.md  config.py  main.py  pyproject.toml
notebooks/: demo.ipynb
src/allocator/: backtest.py  data.py  metrics.py  optimize.py  pipeline.py  plots.py
src/corridor_backtest/: backtest.py  band_search.py  data.py  metrics.py  pipeline.py  plots.py  rebalance.py
tests/: test_backtest.py  test_band_search.py  test_metrics.py  test_optimize.py  test_pipeline.py  test_rebalance.py
