[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allocator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pyarrow>=14.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/allocator"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
